[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "rm41339",email = "rachelma41339@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
